<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.JogoFragment">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/creme">
    <TextView
        android:id="@+id/jogador1"
        android:text="@string/jogador1"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_weight="8"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/azul"
        />

    <TextView
        android:id="@+id/placar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placar1"
        android:width="0dp"
        android:height="25dp"
        android:layout_weight="2"
        android:textColor="@color/azul"
        android:textAlignment="center"
        android:textStyle="bold"

        />
    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/azul"
        app:layout_constraintTop_toBottomOf="@id/linear1"
        >

    </View>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view"
        android:background="@color/creme"
        >

        <TextView
            android:id="@+id/jogador2"
            android:text="@string/jogador2"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="8"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/azul"
            />

        <TextView
            android:id="@+id/placar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placar2"
            android:width="0dp"
            android:height="25dp"
            android:layout_weight="2"
            android:textColor="@color/azul"
            android:textAlignment="center"
            android:textStyle="bold"

            />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linear2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/bt00"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="50sp"/>

            <Button
                android:id="@+id/bt01"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="50sp"/>

            <Button
                android:id="@+id/bt02"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="50sp"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/bt10"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="50sp"/>

            <Button
                android:id="@+id/bt11"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="50sp"/>

            <Button
                android:id="@+id/bt12"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="50sp"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/bt20"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="50sp"/>

            <Button
                android:id="@+id/bt21"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="50sp"/>

            <Button
                android:id="@+id/bt22"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="50sp"/>

        </TableRow>

    </TableLayout>



</androidx.constraintlayout.widget.ConstraintLayout>